--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
       <div class="contact-box">
         <i class="fas fa-download"></i>
         <h4>DOWNLOAD RESUME</h4>
-        <p><a href="images/Brunda_CS_Developer.pdf">Resume</a></p>
+        <p><a href="images/BrundaCS_Resume.pdf">Resume</a></p>
       </div>
     </div>
   </section>
