--- a/index.html
+++ b/index.html
@@ -244,12 +244,11 @@
   <section id="skills">
     <h2 class="section-title">Skills</h2>
     <div class="skills">
-      <div class="card">HTML / CSS</div>
-      <div class="card">PHP / MySQL</div>
-      <div class="card">Python</div>
-      <div class="card">Database / Data Visualization</div>
-      <div class="card">Microsoft Office Suite</div>
-      <div class="card">Git / GitHub</div>
+      <div class="card"><b>SQL</b>
+- Good understanding of RDBMS concepts like datatypes, constraints, tables, normalization etc.
+- Good knowledge of writing SQL Queries.
+- Good understanding of SQL concepts like functions, grouping, sub-queries, co-related sub-queries.
+- Solid knowledge of joins. Good knowledge of DDL, DML, TCL, DCL.</div>
     </div>
   </section>
 
