--- a/index.html
+++ b/index.html
@@ -244,11 +244,12 @@
   <section id="skills">
     <h2 class="section-title">Skills</h2>
     <div class="skills">
-      <div class="card"><b>SQL</b>
-- Good understanding of RDBMS concepts like datatypes, constraints, tables, normalization etc.
-- Good knowledge of writing SQL Queries.
-- Good understanding of SQL concepts like functions, grouping, sub-queries, co-related sub-queries.
-- Solid knowledge of joins. Good knowledge of DDL, DML, TCL, DCL.</div>
+      <div class="card"><b>SQL</b><br>
+      -Good understanding of RDBMS concepts like datatypes, constraints, tables, normalization etc.<br>
+      - Good knowledge of writing SQL Queries.<br>
+      - Good understanding of SQL concepts like functions, grouping, sub-queries, co-related sub-queries.<br>
+      - Solid knowledge of joins. Good knowledge of DDL, DML, TCL, DCL.</div>
+      
     </div>
   </section>
 
@@ -307,11 +308,8 @@
   <section id="certifications">
     <h2 class="section-title">Certifications</h2>
     <div class="certifications">
-      <div class="card">TechnoTut Solutions LLP - Data Analytics with MySQL</div>
-      <div class="card">Pantech.ai - Full-Stack Web Development</div>
-      <div class="card">Great Learning App - PYTHON-BASICS-ONLINE-For beginners</div>
-      <div class="card">TechCentrix - Inter- Collegiate Workshop on Python</div>
-      <div class="card">University of Mysore - Inter-Collegiate Workshop on Machine Learning and Deep Learning</div>
+      <div class="card">TechnoTut Solutions LLP(Internship)- Data Analytics with MySQL</div>
+      <div class="card">Great Learning App - Python basics online for beginners</div>
     </div>
   </section>
 
