--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
   <section id="about">
     <h2 class="section-title">About Me</h2>
     <p class="about">
-      A final-year BCA student and have a clear understanding of programming, database management, and software development. With an interest to work based on the learned skills and work with the industry experts and contribute to the projects.</p>
+  BCA fresher graduate with knowledge of Manual Testing, Automation Testing, Java, and Selenium. Familiar with writing and executing test cases, identifying defects, and ensuring software functionality. Seeking an entry-level Software Test Engineering/QA role to apply technical and analytical skills while contributing to quality software delivery.    
   </section>
 
   <!-- Education -->
