--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
   <section id="about">
     <h2 class="section-title">About Me</h2>
     <p class="about">
-  BCA fresher graduate with knowledge of Manual Testing, Automation Testing, Java, and Selenium. Familiar with writing and executing test cases, identifying defects, and ensuring software functionality. Seeking an entry-level Software Test Engineering/QA role to apply technical and analytical skills while contributing to quality software delivery.    
+     A highly motivated and detail-oriented BCA graduate with specialized training in Software Testing and Automation. Eager to begin a career as a Software Development Engineer in Test (SDET), with strong foundational knowledge in Manual Testing and automation using Java + Selenium Web-Driver. A quick learner with excellent problem-solving skills, passionate about ensuring product quality and contributing to an Agile team.
   </section>
 
   <!-- Education -->
@@ -224,7 +224,7 @@
       <div class="card">
         <strong>Degree:</strong> 
         <h4>St. Joseph's First Grade College, Mysore</h4>
-        <h5>Bachelor of Computer Application | 9.28cgpa</h5>
+        <h5>Bachelor of Computer Application | 9.25 CGPA </h5>
       </div>
       <div class="card">
         <strong>PUC:</strong> 
@@ -249,6 +249,16 @@
       - Good knowledge of writing SQL Queries.<br>
       - Good understanding of SQL concepts like functions, grouping, sub-queries, co-related sub-queries.<br>
       - Solid knowledge of joins. Good knowledge of DDL, DML, TCL, DCL.</div>
+        <div class="card"><b>Core JAVA</b><br>
+      -Strong understanding of Java architecture, variables, operators, loops, and conditional statements.<br>
+-Experienced in methods, method overloading/overriding, static & non-static members.<br>
+-Knowledge of constructors, constructor overloading, and constructor chaining.<br>
+-Familiar with packages and access specifiers.<br>
+-Good grasp of OOPs concepts – Inheritance, Encapsulation, Polymorphism, Abstraction.<br>
+-Worked with exceptions (checked, unchecked, and custom).<br>
+-Hands-on with Scanner, Object, String, StringBuffer, StringBuilder classes.<br>
+-Understanding of wrapper classes.<br>
+-Exposure to multithreading, collection framework, and file handling.</div>
       
     </div>
   </section>
@@ -257,9 +267,10 @@
   <section id="projects">
     <h2 class="section-title">Projects</h2>
     <div class="projects">
-      <div class="card">
-        <h3>Planet Encyclopedia</h3>
-        <p>Developed an interactive mini-website using HTML, CSS, and JavaScript.</p><br> <p>Designed a revolving solar system animation and an in-depth planet encyclopedia.</p>
+        <div class="card">
+        <h3>Nrittya</h3>
+        <p>A Real time Image Recognition of Indian Classical Dance forms and Classical Mudras using Deep Learning. </p><br>
+        <p>Complete project which can identify Mudras and dance form in uploaded image as well as captured image.</p>
       </div>
       <div class="card">
         <h3>Heart Attack in Youngsters Records Prediction</h3>
@@ -267,9 +278,8 @@
 <br><p>Applied data analytics techniques like power BI to predict heart attack risks.</p>
       </div>
       <div class="card">
-        <h3>Nrittya</h3>
-        <p>A Real time Image Recognition of Indian Classical Dance forms and Classical Mudras using Deep Learning. </p><br>
-        <p>Complete project which can identify Mudras and dance form in uploaded image as well as captured image.</p>
+        <h3>Planet Encyclopedia</h3>
+        <p>Developed an interactive mini-website using HTML, CSS, and JavaScript.</p><br> <p>Designed a revolving solar system animation and an in-depth planet encyclopedia.</p>
       </div>
     </div>
   </section>
@@ -353,7 +363,7 @@
       <div class="contact-box">
         <i class="fas fa-download"></i>
         <h4>DOWNLOAD RESUME</h4>
-        <p><a href="images/BrundaCS_Tester.pdf">Resume</a></p>
+        <p><a href="images/Brunda_CS_Tester.pdf">Resume</a></p>
       </div>
     </div>
   </section>
