--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
           <div class="hero-content">
             <div class="hero-text">
               <h1>I'm <span>Brunda CS</span></h1>
-              <p>Graduate Student | Mysore</p>
+              <p>BCA Graduate | Fresher</p>
             </div>
             <div class="hero-image">
               <img src="images/bg_1.png" alt="Your Photo">
