--- a/index.html
+++ b/index.html
@@ -259,6 +259,25 @@
 -Hands-on with Scanner, Object, String, StringBuffer, StringBuilder classes.<br>
 -Understanding of wrapper classes.<br>
 -Exposure to multithreading, collection framework, and file handling.</div>
+        <div class="card"><b>Manual Testing</b><br>
+      -Strong unde-Software Development Life Cycle (SDLC) and Software Testing Life Cycle (STLC).<br>
+-Test case design techniques and test scenarios.<br>
+-Functional, Integration, System, Regression, and User Acceptance Testing.<br>
+-Defect life cycle and bug reporting.<br>
+-Requirement Traceability Matrix (RTM).<br>
+-Agile methodology and Scrum concepts.<br>
+-Hands-on practice in writing and executing test cases.</div>
+         <div class="card"><b>Tool- Selenium </b><br>
+     -Core Java concepts required for automation (OOPs, Constructors, Inheritance, Polymorphism, Exception Handling, Collections)<br>
+-Selenium WebDriver architecture and setup<br>
+-Locators (ID, Name, ClassName, LinkText, XPath, CSS Selector)<br>
+-WebElement handling (Buttons, Text fields, Dropdowns, Checkboxes, Alerts, Frames, Windows)<br>
+-Wait mechanisms (Implicit, Explicit, and Fluent Waits)<br>
+-Actions class for Mouse and Keyboard operations<br>
+-Taking screenshots, and handling pop-ups<br>
+-TestNG framework (Annotations, Prioritisation, Grouping, Reporting)<br>
+-Data-driven testing using Apache POI (Excel handling)<br>
+-Page Object Model (POM) framework and introduction to basic framework design</div>
       
     </div>
   </section>
