--- a/index.html
+++ b/index.html
@@ -245,39 +245,24 @@
     <h2 class="section-title">Skills</h2>
     <div class="skills">
       <div class="card"><b>SQL</b><br>
-      -Good understanding of RDBMS concepts like datatypes, constraints, tables, normalization etc.<br>
-      - Good knowledge of writing SQL Queries.<br>
-      - Good understanding of SQL concepts like functions, grouping, sub-queries, co-related sub-queries.<br>
-      - Solid knowledge of joins. Good knowledge of DDL, DML, TCL, DCL.</div>
+     Strong understanding of RDBMS concepts: datatypes, constraints, tables, normalization.<br>
+Skilled in writing SQL queries, including functions, grouping, sub-queries, and correlated sub-queries.<br>
+Solid knowledge of joins and DDL, DML, TCL, DCL operations.</div>
         <div class="card"><b>Core JAVA</b><br>
-      -Strong understanding of Java architecture, variables, operators, loops, and conditional statements.<br>
--Experienced in methods, method overloading/overriding, static & non-static members.<br>
--Knowledge of constructors, constructor overloading, and constructor chaining.<br>
--Familiar with packages and access specifiers.<br>
--Good grasp of OOPs concepts – Inheritance, Encapsulation, Polymorphism, Abstraction.<br>
--Worked with exceptions (checked, unchecked, and custom).<br>
--Hands-on with Scanner, Object, String, StringBuffer, StringBuilder classes.<br>
--Understanding of wrapper classes.<br>
--Exposure to multithreading, collection framework, and file handling.</div>
+    Good grasp of Java fundamentals: architecture, variables, operators, loops, conditionals.<br>
+Experienced with methods (overloading/overriding), static/non-static members, constructors (overloading & chaining).<br>
+Strong OOPs concepts: Inheritance, Encapsulation, Polymorphism, Abstraction.<br>
+Worked with exceptions, wrapper classes, Scanner, Object, String, StringBuffer, StringBuilder.<br>
+Exposure to multithreading, collections framework, and file handling.</div>
         <div class="card"><b>Manual Testing</b><br>
-      -Strong unde-Software Development Life Cycle (SDLC) and Software Testing Life Cycle (STLC).<br>
--Test case design techniques and test scenarios.<br>
--Functional, Integration, System, Regression, and User Acceptance Testing.<br>
--Defect life cycle and bug reporting.<br>
--Requirement Traceability Matrix (RTM).<br>
--Agile methodology and Scrum concepts.<br>
--Hands-on practice in writing and executing test cases.</div>
+    Strong understanding of SDLC & STLC, Agile methodology, and Scrum concepts.<br>
+Skilled in test case design, execution, and defect reporting; knowledge of RTM.<br>
+Experienced in Functional, Integration, System, Regression, and UAT testing.</div>
          <div class="card"><b>Tool- Selenium </b><br>
-     -Core Java concepts required for automation (OOPs, Constructors, Inheritance, Polymorphism, Exception Handling, Collections)<br>
--Selenium WebDriver architecture and setup<br>
--Locators (ID, Name, ClassName, LinkText, XPath, CSS Selector)<br>
--WebElement handling (Buttons, Text fields, Dropdowns, Checkboxes, Alerts, Frames, Windows)<br>
--Wait mechanisms (Implicit, Explicit, and Fluent Waits)<br>
--Actions class for Mouse and Keyboard operations<br>
--Taking screenshots, and handling pop-ups<br>
--TestNG framework (Annotations, Prioritisation, Grouping, Reporting)<br>
--Data-driven testing using Apache POI (Excel handling)<br>
--Page Object Model (POM) framework and introduction to basic framework design</div>
+    Core Java for automation: OOPs, constructors, inheritance, polymorphism, exception handling, collections.<br>
+Selenium WebDriver setup, locators, WebElement handling, waits, alerts, frames, windows.<br>
+Actions class, screenshots, pop-ups, TestNG (annotations, prioritization, grouping, reporting).<br>
+Data-driven testing (Apache POI) and Page Object Model (POM) framework basics.</div>
       
     </div>
   </section>
@@ -288,17 +273,17 @@
     <div class="projects">
         <div class="card">
         <h3>Nrittya</h3>
-        <p>A Real time Image Recognition of Indian Classical Dance forms and Classical Mudras using Deep Learning. </p><br>
+        <p>A Real time Image Recognition of Indian Classical Dance forms and Classical Mudras using Deep Learning. </p>
         <p>Complete project which can identify Mudras and dance form in uploaded image as well as captured image.</p>
       </div>
       <div class="card">
         <h3>Heart Attack in Youngsters Records Prediction</h3>
         <p>Analyzed 100+ patient records with attributes like age, gender, smoking status, cholesterol levels, BMI, blood pressure, and ECG results.</p>
-<br><p>Applied data analytics techniques like power BI to predict heart attack risks.</p>
+<p>Applied data analytics techniques like power BI to predict heart attack risks.</p>
       </div>
       <div class="card">
         <h3>Planet Encyclopedia</h3>
-        <p>Developed an interactive mini-website using HTML, CSS, and JavaScript.</p><br> <p>Designed a revolving solar system animation and an in-depth planet encyclopedia.</p>
+        <p>Developed an interactive mini-website using HTML, CSS, and JavaScript.</p> <p>Designed a revolving solar system animation and an in-depth planet encyclopedia.</p>
       </div>
     </div>
   </section>
