--- a/index.html
+++ b/index.html
@@ -94,11 +94,16 @@
       line-height: 1.6;
       color: var(--secondary);
     }
-   .skills, .projects, .certifications, .education, .publications {
+    .skills, .projects, .certifications, .education, .publications {
     display: flex;
     flex-direction: column; /* Stack cards vertically */
     gap: 2rem; /* spacing between cards */
 }
+    /* .skills, .projects, .certifications {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 2rem;
+    } */
     .card {
       background: #1a1a1a;
       padding: 2rem;
@@ -245,23 +250,23 @@
     <h2 class="section-title">Skills</h2>
     <div class="skills">
       <div class="card"><b>SQL</b><br>
-     Strong understanding of RDBMS concepts: datatypes, constraints, tables, normalization.<br>
-Skilled in writing SQL queries, including functions, grouping, sub-queries, and correlated sub-queries.<br>
+      Strong understanding of RDBMS concepts: datatypes, constraints, tables, normalization.
+Skilled in writing SQL queries, including functions, grouping, sub-queries, and correlated sub-queries.
 Solid knowledge of joins and DDL, DML, TCL, DCL operations.</div>
         <div class="card"><b>Core JAVA</b><br>
-    Good grasp of Java fundamentals: architecture, variables, operators, loops, conditionals.<br>
-Experienced with methods (overloading/overriding), static/non-static members, constructors (overloading & chaining).<br>
-Strong OOPs concepts: Inheritance, Encapsulation, Polymorphism, Abstraction.<br>
-Worked with exceptions, wrapper classes, Scanner, Object, String, StringBuffer, StringBuilder.<br>
+      Good grasp of Java fundamentals: architecture, variables, operators, loops, conditionals.
+Experienced with methods (overloading/overriding), static/non-static members, constructors (overloading & chaining).
+Strong OOPs concepts: Inheritance, Encapsulation, Polymorphism, Abstraction.
+Worked with exceptions, wrapper classes, Scanner, Object, String, StringBuffer, StringBuilder.
 Exposure to multithreading, collections framework, and file handling.</div>
         <div class="card"><b>Manual Testing</b><br>
-    Strong understanding of SDLC & STLC, Agile methodology, and Scrum concepts.<br>
-Skilled in test case design, execution, and defect reporting; knowledge of RTM.<br>
+      Strong understanding of SDLC & STLC, Agile methodology, and Scrum concepts.
+Skilled in test case design, execution, and defect reporting; knowledge of RTM.
 Experienced in Functional, Integration, System, Regression, and UAT testing.</div>
          <div class="card"><b>Tool- Selenium </b><br>
-    Core Java for automation: OOPs, constructors, inheritance, polymorphism, exception handling, collections.<br>
-Selenium WebDriver setup, locators, WebElement handling, waits, alerts, frames, windows.<br>
-Actions class, screenshots, pop-ups, TestNG (annotations, prioritization, grouping, reporting).<br>
+      Core Java for automation: OOPs, constructors, inheritance, polymorphism, exception handling, collections.
+Selenium WebDriver setup, locators, WebElement handling, waits, alerts, frames, windows.
+Actions class, screenshots, pop-ups, TestNG (annotations, prioritization, grouping, reporting).
 Data-driven testing (Apache POI) and Page Object Model (POM) framework basics.</div>
       
     </div>
@@ -367,7 +372,7 @@ Data-driven testing (Apache POI) and Page Object Model (POM) framework basics.</
       <div class="contact-box">
         <i class="fas fa-download"></i>
         <h4>DOWNLOAD RESUME</h4>
-        <p><a href="images/Brunda_CS_Tester.pdf">Resume</a></p>
+        <p><a href="images/Brunda_CS.pdf">Resume</a></p>
       </div>
     </div>
   </section>
