--- a/index.html
+++ b/index.html
@@ -294,24 +294,14 @@
     <h2 class="section-title">Skills</h2>
     <div class="skills">
       <div class="card"><b>SQL</b><br>
-      Strong understanding of RDBMS concepts: datatypes, constraints, tables, normalization.
-Skilled in writing SQL queries, including functions, grouping, sub-queries, and correlated sub-queries.
-Solid knowledge of joins and DDL, DML, TCL, DCL operations.</div>
+      Strong understanding of RDBMS concepts</div>
         <div class="card"><b>Core JAVA</b><br>
-      Good grasp of Java fundamentals: architecture, variables, operators, loops, conditionals.
-Experienced with methods (overloading/overriding), static/non-static members, constructors (overloading & chaining).
-Strong OOPs concepts: Inheritance, Encapsulation, Polymorphism, Abstraction.
-Worked with exceptions, wrapper classes, Scanner, Object, String, StringBuffer, StringBuilder.
-Exposure to multithreading, collections framework, and file handling.</div>
+      Good grasp of Java fundamentals</div>
         <div class="card"><b>Manual Testing</b><br>
       Strong understanding of SDLC & STLC, Agile methodology, and Scrum concepts.
-Skilled in test case design, execution, and defect reporting; knowledge of RTM.
-Experienced in Functional, Integration, System, Regression, and UAT testing.</div>
+</div>
          <div class="card"><b>Tool- Selenium </b><br>
-      Core Java for automation: OOPs, constructors, inheritance, polymorphism, exception handling, collections.
-Selenium WebDriver setup, locators, WebElement handling, waits, alerts, frames, windows.
-Actions class, screenshots, pop-ups, TestNG (annotations, prioritization, grouping, reporting).
-Data-driven testing (Apache POI) and Page Object Model (POM) framework basics.</div>
+      Core Java for automation using Selenium tool.</div>
       
     </div>
   </section>
@@ -347,18 +337,15 @@ Data-driven testing (Apache POI) and Page Object Model (POM) framework basics.</
 <section id="publications">
     <h2 class="section-title">Publications</h2>
     <div class="publications">
+         <div class="card">
+        <h3>"Nrittya" - 04/2025</h3>
+        <h5><i>ISBN publications</i></h5>
+      </div>
       <div class="card">
         <h3>"Detection of Melancholy and anxiety in children using Machine Learning" - 06/2023</h3>
         <h5><i>IJSEDR publications, Vol.8 Issue6</i></h5>
       </div>
-      <div class="card">
-        <h3>"Online Bug Tracking" - 10/2023</h3>
-        <h5><i>Juni Khyat, Vol.13 Issue10 No.02</i></h5>
-      </div>
-      <div class="card">
-        <h3>"Nrittya" - 04/2025</h3>
-        <h5><i>ISBN publications</i></h5>
-      </div>
+     
     </div>
   </section>
   
