--- a/index.html
+++ b/index.html
@@ -354,16 +354,16 @@
   <section id="certifications">
     <h2 class="section-title">Certifications</h2>
     <div class="certifications">
-      <div class="card">TechnoTut Solutions LLP(Internship)- Data Analytics with MySQL</div>
-      <div class="card">Great Learning App - Python basics online for beginners</div>
+      <div class="card"><a href="images/Technotut.jpg">TechnoTut Solutions LLP(Internship)- Data Analytics with MySQL</div>
+      <div class="card"><a href="images/Python.jpg">Great Learning App - Python basics online for beginners</div>
     </div>
   </section>
 
   <section id="awards">
     <h2 class="section-title">Awards</h2>
     <div class="certifications">
-      <div class="card">Best Outgoing Student title 2025</div>
-      <div class="card">Best Paper Presenter in International Conference - Fusion 2025</div>
+      <div class="card"><a href="images/BOST.jpg">Best Outgoing Student title 2025</div>
+      <div class="card"><a href="images/Fusion.jpg">Best Paper Presenter in International Conference - Fusion 2025</div>
    </div>
   </section>
 
