--- a/index.html
+++ b/index.html
@@ -372,14 +372,14 @@ Data-driven testing (Apache POI) and Page Object Model (POM) framework basics.</
   <h1>Projects</h1>
   <div class="projects">
     
-    <div class="card" data-video="videos/Nrittya.mp4">
-      <img src="videos/img5.jpg" alt="Nrittya" class="project-img">
+    <div class="card" data-video="Nrittya.mp4">
+      <img src="img5.jpg" alt="Nrittya" class="project-img">
       <b><h3>Nrittya | 05/2025</h3></b>
       <p>Developed 35 automated test cases using Selenium for dance form recognition app.</p>
     </div>
 
-    <div class="card" data-video="videos/Space.mp4">
-      <img src="videos/img4.jpg" alt="Planet Encyclopedia" class="project-img">
+    <div class="card" data-video="Space.mp4">
+      <img src="img4.jpg" alt="Planet Encyclopedia" class="project-img">
       <b><h3>Planet Encyclopedia | 11/2024</h3></b>
       <p>Interactive website with solar system animation built using HTML, CSS, JS.</p>
     </div>
