--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
   <section id="about">
     <h2 class="section-title">About Me</h2>
     <p class="about">
-    Detail oriented QA Trainee t Alice Blue Financial Services with a strong interest in manual and automation testing. </p>
+    Detail oriented QA Trainee | Alice Blue Financial Services with a strong interest in manual and automation testing. </p>
     <p  class="about">Seeking to contribute to high quality trading applications by learning domain-specific workflows, executing test cases, and ensuring defect-free release.</p>
     </section>
 
