--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
               <p>QA Trainee | Alice Blue Financial Services Pvt Ltd</p>
             </div>
             <div class="hero-image">
-              <img src="images/img1.png" alt="Your Photo">
+              <img src="Brunda_photo.png" alt="Your Photo">
             </div>
           </div>
         </header>
